--- a/division.tex
+++ b/division.tex
@@ -1,3 +1,52 @@
+
+	%----------------------------------------------------------------%
+	
+	\item Perform the following binary divisions.
+	%\begin{multicols}{2}
+	%\begin{itemize}
+	%\item[a)] $(1001000)_{2} \div ( 1000)_{2}$
+	%\item[b)] $(101101)_{2} \div (1001)_{2}$
+	%\item[c)] $(1001011000)_{2} \div (101000)_{2}$
+	%\item[d)] $(1100000)_{2} \div (10000)_{2}$
+	%\end{itemize}
+	%\end{multicols}
+	
+	\begin{enumerate}
+		\item Which of the following binary numbers is the result of this binary division: $(111001)_{2} \div ( 10011)_{2}$. % (57) /  (19)
+		\begin{multicols}{2}
+			\begin{itemize}
+				\item[a)] $(10)_2$ %2
+				\item[b)] $(11)_{2}$ %3
+				\item[c)] $(100)_{2}$ %4
+				\item[d)] $(101)_{2}$ %5
+			\end{itemize}
+		\end{multicols}
+		\item Which of the following binary numbers is the result of this binary division: $(101010)_{2} \div ( 111 )_{2}$. % (42) /  (7)
+		\begin{multicols}{2}
+			\begin{itemize}
+				\item[a)] $(11)_2$ %3
+				\item[b)] $(100)_{2}$ %4
+				\item[c)] $(101)_{2}$ %5
+				\item[d)] $(110)_{2}$ %6
+			\end{itemize}
+		\end{multicols}
+		\item Which of the following binary numbers is the result of this binary division: $(1001110)_{2} \div ( 1101 )_{2}$. % (78) /  (13)
+		\begin{multicols}{2}
+			\begin{itemize}
+				
+				\item[a)] $(100)_{2}$ %4
+				\item[b)] $(110)_{2}$ %6
+				\item[c)] $(111)_{2}$ %7
+				\item[d)] $(1001)_2$ %9
+			\end{itemize}
+		\end{multicols}
+	\end{enumerate}
+	
+	
+\end{enumerate}
+
+
+
 	\begin{enumerate}
 		\item Which of the following binary numbers is the result of this binary division: $(10)_{2} \times ( 1101)_{2}$. % % (2) /  (13)
 		\begin{multicols}{2}
