--- a/binaryconversion.tex
+++ b/binaryconversion.tex
@@ -203,4 +203,88 @@
 \end{enumerate}
 
 
+\begin{center}
+  \textbf{Number Systems - Tutorial Sheet 2}
+\end{center}
+\section*{Part A: Number Systems - Binary Numbers}
+\begin{enumerate}
+\item Express the following decimal numbers as binary numbers.
+  \begin{multicols}{4}
+    \begin{itemize}
+    \item[i)] $(73)_{10}$
+    \item[ii)] $(15)_{10}$
+    \item[iii)] $(22)_{10}$
+    \end{itemize}
+  \end{multicols}
+
+  All three answers are among the following options.
+  \begin{multicols}{4}
+    \begin{itemize}
+    \item[a)] $(10110)_{2}$ %22
+    \item[b)] $(1111)_{2}$ %15
+    \item[c)] $(1001001)_{2}$ %73
+    \item[d)] $(1000010)_{2}$ %64
+    \end{itemize}
+  \end{multicols}
+
+\item Express the following binary numbers as decimal numbers.
+  \begin{multicols}{4}
+    \begin{itemize}
+    \item[a)] $(101010)_{2}$
+    \item[b)] $(10101)_{2}$
+    \item[c)] $(111010)_{2}$
+    \item[d)] $(11010)_{2}$
+    \end{itemize}
+  \end{multicols}
+  \item Express the following binary numbers as decimal numbers.
+  \begin{multicols}{4}
+    \begin{itemize}
+    \item[a)] $(110.10101)_{2}$
+    \item[b)] $(101.0111)_{2}$
+    \item[c)] $(111.01)_{2}$
+    \item[d)] $(110.1101)_{2}$
+    \end{itemize}
+  \end{multicols}
+\item Express the following decimal numbers as binary numbers.
+  \begin{multicols}{4}
+    \begin{itemize}
+    \item[a)] $(27.4375)_{10}$  %
+    \item[b)] $(5.625)_{10}$
+    \item[c)] $(13.125)_{10}$
+    \item[d)] $(11.1875)_{10}$
+    \end{itemize}
+  \end{multicols}
+\end{enumerate}
+\newpage
+
+\subsection*{Question 1 : Binary numbers}
+\begin{itemize}
+	%---------------------------%
+	\item[(a)] Express the following binary numbers as decimal numbers
+	\begin{multicols}{2}
+		\begin{itemize}
+			\item[(i)] $101$
+			\item[(ii)] $1101$
+			\item[(iii)] $11011$
+			\item[(iv)] $100101$
+		\end{itemize}
+	\end{multicols}
+
+
+	
+	%----------------------------------------------------------------%
+	
+	%---------------------------%
+	\item[(b)] Express the following decimal numbers as binary numbers
+	\begin{multicols}{2}
+		\begin{itemize}
+			\item[(i)] 6
+			\item[(ii)] 15
+			\item[(iii)] 37
+			\item[(iv)] 77
+		\end{itemize}
+	\end{multicols}
+
+
+
 \end{document}
