--- a/division.tex
+++ b/division.tex
@@ -1,4 +1,45 @@
 
+\documentclass[12pt]{article}
+%\usepackage[final]{pdfpages}
+
+\usepackage{graphicx}
+\graphicspath{{/Users/kevinhayes/Documents/teaching/images/}}
+
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+
+\newcommand{\bbr}{\Bbb{R}}
+\newcommand{\zn}{\Bbb{Z}^n}
+
+%\usepackage{epsfig}
+%\usepackage{subfigure}
+\usepackage{amscd}
+\usepackage{amssymb}
+\usepackage{amsbsy}
+\usepackage{amsthm}
+\usepackage{multicol}
+\usepackage{natbib}
+\usepackage{amsbsy}
+\usepackage{enumerate}
+\usepackage{amsmath}
+\usepackage{eurosym}
+%\usepackage{beamerarticle}
+\usepackage{txfonts}
+\usepackage{fancyvrb}
+\usepackage{fancyhdr}
+\usepackage{natbib}
+\bibliographystyle{chicago}
+
+\usepackage{vmargin}
+% left top textwidth textheight headheight
+% headsep footheight footskip
+\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
+\renewcommand{\baselinestretch}{1.3}
+
+
+\pagenumbering{arabic}
+
+\begin{document}
 \begin{enumerate}
 \item Which of the following binary numbers is the result of this binary division: $(10)_{2} \times ( 1101)_{2}$. % % (2) /  (13)
 \begin{multicols}{2}
@@ -90,9 +131,7 @@
 				\item[d)] $(11011)_2$ %27
 			\end{itemize}
 		\end{multicols}
-	\end{enumerate}
-	
-	\newpage
+
 	%----------------------------------------------------------------%
 	
 	\item Perform the following binary divisions.
@@ -105,7 +144,7 @@
 	%\end{itemize}
 	%\end{multicols}
 	
-	\begin{enumerate}
+
 		\item Which of the following binary numbers is the result of this binary division: $(111001)_{2} \div ( 10011)_{2}$. % (57) /  (19)
 		\begin{multicols}{2}
 			\begin{itemize}
@@ -134,14 +173,9 @@
 				\item[d)] $(1001)_2$ %9
 			\end{itemize}
 		\end{multicols}
-	\end{enumerate}
+
 	
 	
-\end{enumerate}
-
-
-
-	\begin{enumerate}
 		\item Which of the following binary numbers is the result of this binary division: $(10)_{2} \times ( 1101)_{2}$. % % (2) /  (13)
 		\begin{multicols}{2}
 			\begin{itemize}
@@ -170,4 +204,5 @@
 			\end{itemize}
 		\end{multicols}
 	\end{enumerate}
-	
+
+\end{document}
