--- a/cvTools/cvFolds.Rmd
+++ b/cvTools/cvFolds.Rmd
@@ -15,23 +15,24 @@ type = c("random", "consecutive", "interleaved"))
 </code></pre>
 #### Arguments 
 
-n an integer giving the number of observations to be split into groups.
-K an integer giving the number of groups into which the observations should
+* n an integer giving the number of observations to be split into groups.
+* K an integer giving the number of groups into which the observations should
 be split (the default is five). Setting K equal to n yields leave-one-out crossvalidation.
-R an integer giving the number of replications for repeatedK-fold cross-validation.
-This is ignored for for leave-one-out cross-validation and other non-random
-splits of the data.
-type a character string specifying the type of folds to be generated. Possible values
+* R an integer giving the number of replications for repeatedK-fold cross-validation.
+This is ignored for for leave-one-out cross-validation and other non-random splits of the data.
+* type a character string specifying the type of folds to be generated. Possible values
 are "random" (the default), "consecutive" or "interleaved".
 cvReshape 15
-Value
+
+#### Value
 An object of class "cvFolds" with the following components:
-n an integer giving the number of observations.
-K an integer giving the number of folds.
-R an integer giving the number of replications.
-subsets an integer matrix in which each column contains a permutation of the indices.
+* n an integer giving the number of observations.
+* K an integer giving the number of folds.
+* R an integer giving the number of replications.
+* subsets an integer matrix in which each column contains a permutation of the indices.
 which an integer vector giving the fold for each permuted observation.
-Author(s)
+
+#### Author(s)
 Andreas Alfons
 See Also
 cvFit, cvSelect, cvTuning
