--- a/cvTools/dotplot.cv.Rmd
+++ b/cvTools/dotplot.cv.Rmd
@@ -17,32 +17,15 @@ select = NULL, seFactor = x$seFactor, ...)
 </code></pre>
 #### Arguments 
 
-x an object inheriting from class "cvSelect" that contains cross-validation results.
-data currently ignored.
+* x an object inheriting from class "cvSelect" that contains cross-validation results. data currently ignored.
 subset a character, integer or logical vector indicating the subset of models for which
 to plot the cross-validation results.
 select a character, integer or logical vector indicating the columns of cross-validation
 results to be plotted.
-seFactor a numeric value giving the multiplication factor of the standard error for displaying
+* seFactor a numeric value giving the multiplication factor of the standard error for displaying
 error bars. Error bars can be suppressed by setting this to NA.
-... additional 
-</code></pre>
-#### Arguments 
- to be passed to the "formula" method of dotplot.
+... additional  Arguments to be passed to the "formula" method of dotplot.
 
-#### Details 
-
-For objects with multiple columns of repeated cross-validation results, conditional dot plots are
-produced.
-Value
-An object of class "trellis" is returned invisibly. The update method can be used to update components
-of the object and the print method (usually called by default) will plot it on an appropriate
-plotting device.
-dotplot.cv 29
-Author(s)
-Andreas Alfons
-See Also
-cvFit, cvSelect, cvTuning, plot, xyplot, bwplot, densityplot
 
 #### Examples 
 ```{r}
@@ -57,10 +40,16 @@ folds <- cvFolds(nrow(coleman), K = 5, R = 10)
 fitLm <- lm(Y ~ ., data = coleman)
 cvFitLm <- cvLm(fitLm, cost = rtmspe,
 folds = folds, trim = 0.1)
+```
+
+```{r}
 # perform cross-validation for an MM regression model
 fitLmrob <- lmrob(Y ~ ., data = coleman, k.max = 500)
 cvFitLmrob <- cvLmrob(fitLmrob, cost = rtmspe,
 folds = folds, trim = 0.1)
+```
+
+```{r}
 # perform cross-validation for an LTS regression model
 fitLts <- ltsReg(Y ~ ., data = coleman)
 cvFitLts <- cvLts(fitLts, cost = rtmspe,
@@ -69,6 +58,9 @@ folds = folds, trim = 0.1)
 cvFits <- cvSelect(LS = cvFitLm, MM = cvFitLmrob, LTS = cvFitLts)
 cvFits
 dotplot(cvFits)
+```
+
+```{r}
 ## compare raw and reweighted LTS estimators for
 ## 50% and 75% subsets
 # 50% subsets
@@ -84,3 +76,18 @@ fit = "both", trim = 0.1)
 cvFitsLts <- cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
 cvFitsLts
 dotplot(cvFitsLts)
+```
+
+#### Details 
+
+For objects with multiple columns of repeated cross-validation results, conditional dot plots are
+produced.
+Value
+An object of class "trellis" is returned invisibly. The update method can be used to update components
+of the object and the print method (usually called by default) will plot it on an appropriate
+plotting device.
+dotplot.cv 29
+Author(s)
+Andreas Alfons
+See Also
+cvFit, cvSelect, cvTuning, plot, xyplot, bwplot, densityplot
