--- a/cvTools/plot.cv.Rmd
+++ b/cvTools/plot.cv.Rmd
@@ -20,34 +20,12 @@ method = c("bwplot", "densityplot", "xyplot", "dotplot"),
 </code></pre>
 #### Arguments 
 
-x an object inheriting from class "cv" or "cvSelect" that contains cross-validation
-results.
-method a character string specifying the type of plot. For the "cv" method, possible
-values are "bwplot" to create a box-and-whisker plot via bwplot (the default),
-or "densityplot" to create a kernel density plot via densityplot. Note that
-those plots are only meaningful for results from repeated cross-validation. For
-the "cvSelect" method, there are two additional possibilities: "xyplot" to plot
-the (average) results for each model via xyplot, or "dotplot" to create a similar
-dot plot via dotplot. The default is to use "bwplot" for results from repeated
-cross-validation and "xyplot" otherwise. In any case, partial string matching
-allows supply abbreviations of the accepted values.
-... additional 
-</code></pre>
-#### Arguments 
- to be passed down.
+* x an object inheriting from class "cv" or "cvSelect" that contains cross-validation results.
+* method a character string specifying the type of plot. For the "cv" method, possible values are "bwplot" to create a box-and-whisker plot via bwplot (the default), or "densityplot" to create a kernel density plot via densityplot. Note that
+those plots are only meaningful for results from repeated cross-validation. For the "cvSelect" method, there are two additional possibilities: "xyplot" to plot the (average) results for each model via xyplot, or "dotplot" to create a similar
+dot plot via dotplot. The default is to use "bwplot" for results from repeated cross-validation and "xyplot" otherwise. In any case, partial string matching allows supply abbreviations of the accepted values.
+* ... additional Arguments  to be passed down.
 
-#### Details 
-
-For objects with multiple columns of cross-validation results, conditional plots are produced.
-Value
-An object of class "trellis" is returned invisibly. The update method can be used to update components
-of the object and the print method (usually called by default) will plot it on an appropriate
-plotting device.
-plot.cv 31
-Author(s)
-Andreas Alfons
-See Also
-cvFit, cvSelect, cvTuning, bwplot, densityplot, xyplot, dotplot
 
 #### Examples 
 ```{r}
@@ -100,3 +78,17 @@ plot(cvFitsLts, method = "bw")
 plot(cvFitsLts, method = "density")
 plot(cvFitsLts, method = "xy")
 plot(cvFitsLts, method = "dot")
+```
+
+#### Details 
+
+For objects with multiple columns of cross-validation results, conditional plots are produced.
+Value
+An object of class "trellis" is returned invisibly. The update method can be used to update components
+of the object and the print method (usually called by default) will plot it on an appropriate
+plotting device.
+plot.cv 31
+Author(s)
+Andreas Alfons
+See Also
+cvFit, cvSelect, cvTuning, bwplot, densityplot, xyplot, dotplot
