--- a/cvTools/about_cvTools.Rmd
+++ b/cvTools/about_cvTools.Rmd
@@ -1,23 +1,22 @@
 ---
 title: "cvTools"
-author: "Kevin O'Brien"
-date: "15 December 2018"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-Package 'cvTools'
-February 19, 2015
-Type Package
-Title Cross-validation tools for regression models
-Version 0.3.2
-Date 2012-05-11
-Author Andreas Alfons
-Maintainer Andreas Alfons <andreas.alfons@econ.kuleuven.be>
-Depends R (>= 2.11.0), lattice, robustbase
-Imports lattice, robustbase, stats
+
+* Package 'cvTools'
+* February 19, 2015
+* Type Package
+* Title Cross-validation tools for regression models
+* Version 0.3.2
+* Date 2012-05-11
+* Author Andreas Alfons
+* Maintainer Andreas Alfons <andreas.alfons@econ.kuleuven.be>
+* Depends R (>= 2.11.0), lattice, robustbase
+* Imports lattice, robustbase, stats
 
 #### Description 
  Tools that allow developers to write functions for
@@ -25,14 +24,13 @@ cross-validation with minimal programming effort and assist
 users with model selection.
 License GPL (>= 2)
 LazyLoad yes
-Collate 'accessors.R' 'aggregate.R' 'bwplot.R' 'cost.R' 'cvFit.R'
-'cvFolds.R' 'cvReshape.R' 'cvSelect.R' 'cvTool.R' 'cvTuning.R'
-'densityplot.R' 'dotplot.R' 'plot.R' 'print.R' 'repCV.R'
-'selectBest.R' 'subset.R' 'summary.R' 'utils.R' 'xyplot.R'
+Collate 'accessors.R' 'aggregate.R' 'bwplot.R' 'cost.R' 'cvFit.R' 'cvFolds.R' 'cvReshape.R' 'cvSelect.R' 'cvTool.R' 'cvTuning.R'
+'densityplot.R' 'dotplot.R' 'plot.R' 'print.R' 'repCV.R' 'selectBest.R' 'subset.R' 'summary.R' 'utils.R' 'xyplot.R'
 Repository CRAN
 Date/Publication 2012-05-14 15:13:43
 NeedsCompilation no
-R topics documented:
+
+#### R topics documented:
 cvTools-package          . . 2
 accessors           . . 3
 aggregate.cv           . 5
@@ -53,7 +51,7 @@ repCV            32
 subset.cv           . . . 35
 summary.cv           . 36
 xyplot.cv           . . 38
-Index 42
+
 cvTools-package Cross-validation tools for regression models
 
 #### Description 
